@@ -14,6 +14,7 @@
 	    prevented it from working.
 	  + Version bumped to 4.9.6
 	* Use locale for date formats in panel.
+	* gitview: don't special-case non-regular files.
 
 2009-02-26  Ian Beckwith  <ianb@erislabs.net>
 
